--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.24.1",
     "react-scripts": "^5.0.1",
     "react-slick": "^0.30.2",
+    "react-toastify": "^10.0.5",
     "reactstrap": "^9.2.2",
     "remixicon": "^4.3.0",
     "slick-carousel": "^1.8.1",
