add review controller

--- a/backend/.env
+++ b/backend/.env
@@ -3,3 +3,4 @@ PORT=4000
 # prachimishra23123
 # g1jH3mdOYFvjNeAJ
 MONGO_URI=mongodb+srv://prachimishra23123:g1jH3mdOYFvjNeAJ@cluster0.fyzqfnl.mongodb.net/tours_booking?retryWrites=true&w=majority
+JWT_SECRET= prachi
